Fixing z-index for search filter.

--- a/packages/custom/rizers/public/assets/css/rize/filter.less
+++ b/packages/custom/rizers/public/assets/css/rize/filter.less
@@ -9,7 +9,7 @@
 	position: fixed;
 		top: 5rem;
 	width: 100%;
-	z-index: 9990;
+	z-index: 9997;
 }
 
 .rize-list-filter {
@@ -43,6 +43,7 @@
 		position: fixed;
 			top: 1.5rem;
 		width: 30%;
+		z-index: 9999;
 	}
 
 	.rize-list-filter {
