--- a/packages/custom/rizers/public/assets/css/rizers.css
+++ b/packages/custom/rizers/public/assets/css/rizers.css
@@ -1342,7 +1342,7 @@ a {
   position: fixed;
   top: 5rem;
   width: 100%;
-  z-index: 9990;
+  z-index: 9997;
 }
 .rize-list-filter {
   margin: 3.5rem 0 0 0;
@@ -1371,6 +1371,7 @@ a {
     position: fixed;
     top: 1.5rem;
     width: 30%;
+    z-index: 9999;
   }
   .rize-list-filter {
     margin: 0;
